tests/snapshots/layout__layout_default.snap
---
source: tests/layout.rs
expression: buf + & cursor_pos
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"              ac                                                                "
"    multi-sel ab                                                                "
"sel multi-sel a                                                                 "
"              header line 2                                                     "
"              header line 1                                                     "
"              header                                                            "
"  3/5 [2]                                                                    0/0"
"prompt a                                                                        "
cursor: (24, 9)
