tests/snapshots/layout__layout_default@001.snap
---
source: tests/layout.rs
description: "input: items [\"header line 1\", \"header line 2\", \"a\", \"b\", \"c\", \"ab\", \"ac\"]\noptions: -q a --header header --header-lines 2 --prompt prompt  --selector sel  --multi-selector multi-sel  -m --pre-select-n 2"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"              ac                                                                "
"    multi-sel ab                                                                "
"sel multi-sel a                                                                 "
"              header line 2                                                     "
"              header line 1                                                     "
"              header                                                            "
"  3/5 [2]                                                                    0/0"
"prompt a                                                                        "
cursor: (24, 9)
