tests/snapshots/layout__layout_reverse.snap
---
source: tests/layout.rs
expression: buf + & cursor_pos
---
"prompt a                                                                        "
"  3/5 [2]                                                                    0/0"
"              header                                                            "
"              header line 1                                                     "
"              header line 2                                                     "
"sel multi-sel a                                                                 "
"    multi-sel ab                                                                "
"              ac                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
cursor: (1, 9)
