tests/snapshots/layout__layout_reverse_list.snap
---
source: tests/layout.rs
expression: buf + & cursor_pos
---
"sel multi-sel a                                                                 "
"    multi-sel ab                                                                "
"              ac                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"              header line 1                                                     "
"              header line 2                                                     "
"              header                                                            "
"  3/5 [2]                                                                    0/0"
"prompt a                                                                        "
cursor: (24, 9)
